<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/colorBackground">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/bottom_label_machine_info"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"/>

            <TextView style="@style/bottom_text_title" android:text="@string/bottom_label_factory" />
            <TextView android:id="@+id/tv_factory" style="@style/bottom_text_data" android:text="-" />

            <TextView style="@style/bottom_text_title" android:text="@string/bottom_label_room" />
            <TextView android:id="@+id/tv_room" style="@style/bottom_text_data" android:text="-" />

            <TextView style="@style/bottom_text_title" android:text="@string/bottom_label_line" />
            <TextView android:id="@+id/tv_line" style="@style/bottom_text_data" android:text="-" />

            <TextView style="@style/bottom_text_title" android:text="@string/bottom_label_number" />
            <TextView android:id="@+id/tv_mc_no" style="@style/bottom_text_data" android:text="-" />

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:text="@string/bottom_label_mc_model"-->
            <!--android:textSize="14sp"-->
            <!--android:textColor="@color/colorWhite"/>-->
            <!--<TextView-->
            <!--android:id="@+id/tv_mc_model"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="-"-->
            <!--android:textSize="14sp"-->
            <!--android:textColor="@color/colorOrange"/>-->
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/bottom_label_operator_info"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"/>

            <TextView style="@style/bottom_text_title" android:text="@string/bottom_label_employee_number" />
            <TextView android:id="@+id/tv_employee_no" style="@style/bottom_text_data" android:text="-" />

            <TextView style="@style/bottom_text_title" android:text="@string/bottom_label_employee_name" />
            <TextView android:id="@+id/tv_employee_name" style="@style/bottom_text_data" android:text="-" />

            <TextView
                    android:id="@+id/tv_shift"
                    style="@style/bottom_text_data"
                    android:layout_marginLeft="20dp"
                    android:text="-" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
