<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="6dp"
            android:orientation="horizontal">

        <TextView
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/list_item_shift"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

        <!--<TextView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/list_item_design_idx"-->
                <!--android:textSize="15sp"-->
                <!--android:textColor="#333"/>-->

        <TextView
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:text="@string/list_item_start_time"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

        <TextView
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:text="@string/list_item_end_time"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        <TextView
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:text="@string/list_item_down_time"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

        <TextView
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:text="@string/list_item_completed"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

        <TextView
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/list_item_list"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
